<resources>
    <string name="app_name">To Do List</string>
    <string name="title">Title</string>
    <string name="tag">Tag</string>
    <string name="date">Date</string>
    <string name="status">Status</string>
    <string name="add_new_task">Add new task</string>
    <string name="is_the_task_completed">is the task completed</string>
    <string name="search">Search</string>
    <string name="sort_by">Sort BY</string>
    <string name="setting">Setting</string>
    <string name="group_by">Group By</string>
    <string name="due_date">Due Date</string>
    <string name="creation_date">Creation Date</string>
    <string name="subtasks">SubTasks</string>
    <string name="title_hint">Title</string>
    <string name="new_subtask">New subtask</string>
    <string name="notify_me_by">Notify me by</string>
    <string name="time">Time</string>
    <string name="location">Location</string>
    <string name="description">Description</string>
    <string name="created">Created</string>
    <string name="discard">Discard</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="discard_changes">Discard Changes</string>
    <string name="done">Done</string>
    <string name="delete_the_task">Delete the task</string>
    <string name="new_task">New Task</string>
</resources>